--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,3 +4,8 @@ delete_merged_file: true
 language:
   ui:
     chapter_name: "Chapter "
+rmd_files: ["index.Rmd",
+            "Rmd/01-intro.Rmd",
+            "Rmd/03-growth_charts.Rmd",
+            "Rmd/04-method.Rmd",
+            "Rmd/Appendix-references.Rmd"]
