Add D-score implementation chapter

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,4 +9,5 @@ rmd_files: ["index.Rmd",
             "Rmd/02-data_specification.Rmd",
             "Rmd/03-growth_charts.Rmd",
             "Rmd/04-method.Rmd",
+            "RMD/05-D-score-implementation.Rmd",
             "Rmd/Appendix-references.Rmd"]
