Major update of book contents

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,6 +9,8 @@ rmd_files: ["index.Rmd",
             "Rmd/02-data_specification.Rmd",
             "Rmd/03-growth_charts.Rmd",
             "Rmd/04-method.Rmd",
-            "RMD/05-D-score-implementation.Rmd",
-            "Rmd/06-docker.Rmd",
+            "Rmd/05-D-score-implementation.Rmd",
+            "Rmd/06-opencpu-deployment.Rmd",
+            "Rmd/07-docker.Rmd",
+            "Rmd/08-certificates.Rmd",
             "Rmd/Appendix-references.Rmd"]
