--- a/_output.yml
+++ b/_output.yml
@@ -3,7 +3,7 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">JAMES Internals</a></li>
+        <li><a href="./">JAMES Documentation</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     download: ["pdf", "epub"]
